changed something I guess

--- a/i3config/i3.config
+++ b/i3config/i3.config
@@ -132,6 +132,7 @@ bindsym $mod+Shift+0 move container to workspace $workspace10
 assign[class="Firefox"] $workspace2
 assign[class="Pavucontrol"] $workspace10
 for_window [class="VirtualBox Manager"] floating enable
+for_window [class="blog_editor"] floating enable
 
 # restart i3
 bindsym $mod+Shift+r restart
@@ -170,12 +171,12 @@ gaps inner 10
 gaps outer 15
 
 # Colors
-set $bg-color 	         #f9da0c
+set $bg-color 	         #3e464e
 set $inactive-bg-color   #212121
 set $text-color          #f4f4f4
 set $inactive-text-color #1E023D
 set $urgent-bg-color     #1E023D
-set $indi-color          #FFFFFF
+set $indi-color          #5e666e
 
 # window colors
 #                       border              background         text                 indicator
